# grimoire

./: .gitignore  README.md  pyproject.toml  sources.yaml
grimoire_app/: config.py  controller.py  model.py  sources.default.yaml
